# MobilTelescoApp

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/mobiltelesco/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: model.ncnn.param
app/src/main/cpp/: CMakeLists.txt  nanodet.cpp
app/src/main/cpp/ncnn-20240820-android-vulkan/x86_64/include/ncnn/: platform.h
app/src/main/cpp/ncnn-20240820-android-vulkan/x86_64/lib/cmake/: OGLCompilerTargets.cmake  OSDependentTargets.cmake  SPIRVTargets.cmake  glslangTargets.cmake
app/src/main/cpp/ncnn-20240820-android-vulkan/x86_64/lib/cmake/glslang/: glslang-targets-release.cmake  glslang-targets.cmake
app/src/main/cpp/ncnn-20240820-android-vulkan/x86_64/lib/cmake/ncnn/: ncnn.cmake  ncnnConfig.cmake
app/src/main/cpp/ncnn-20240820-android-vulkan/x86_64/lib/pkgconfig/: ncnn.pc
app/src/main/java/com/example/mobiltelesco/: CameraActivity.kt  IntroActivity.kt  LoadingActivity.kt  MainActivity.kt  NanoDetTFLite.kt
app/src/main/java/com/example/mobiltelesco/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_camera.xml  activity_intro.xml  activity_intro_loading.xml  activity_loading.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/mobiltelesco/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
